<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="691dp"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button_description"
                android:padding="5dp"
                android:src="@drawable/icon_back_white" />

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:padding="16dp"
                android:src="@drawable/book" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iconImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#808080" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="319dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_button"
            android:text="@string/register"
            android:textColor="@color/white"
             />


    </LinearLayout>
</RelativeLayout>
